Allow Konsole's zmodem file transfers to work.

Thanks to Thomas Dreibholz <dreibh@iem.uni-due.de> for the patch.  I removed
some whitespace changes from his patch on reviewboard.

BUG: 200744

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1016847